<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:orientation="vertical"
        android:background="@drawable/shape_orderitem_bg"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialog_contenttv"
            android:layout_width="wrap_content"
            android:text="@string/dialog_tip"
            android:textColor="@color/color333"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/fengexian"
            android:layout_marginTop="40dp"
            android:layout_height="1dp"></RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/cancleOrder_yes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/tv_yes"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/statecolor"
                android:textSize="18sp"
                android:layout_height="match_parent" />
            <RelativeLayout
                android:layout_width="1dp"
                android:background="@color/fengexian"
                android:layout_height="match_parent"></RelativeLayout>
            <TextView
                android:id="@+id/cancleOrder_no"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/tv_no"
                android:layout_gravity="center"
                android:textColor="@color/statecolor"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
